# Seam_Runtime

./: .gitignore  .rgignore  AGENTS.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  GEMINI.md  HISTORY.md  HISTORY_INDEX.md  LICENSE  MANIFEST.in  NOTICE  PROJECT_STATUS.md  PUBLIC_SDK_BOUNDARY.md  README.md  REPO_LEDGER.md  ROADMAP.md  docker-compose.yaml  pyproject.toml  requirements.txt  server.json
.gemini/: settings.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  external-memory-benchmarks.yml  repository-maintenance.yml  sdk-ci.yml  sdk-publish.yml
.seam/: cross_index.md
.seam/cross_index_archive/: 0001-0010.cross.md  0001-0011.cross.md  0001-0019.cross.md  0001-0051.cross.md  0001-0062.cross.md  0001-0065.cross.md  0001-0066.cross.md  0001-0069.cross.md  0001-0072.cross.md  0001-0075.cross.md  0001-0076.cross.md  0001-0078.cross.md  0001-0089.cross.md  0001-0091.cross.md  0001-0092.cross.md  0001-0096.cross.md  0001-0098.cross.md  0001-0100.cross.md  0001-0104.cross.md  0001-0105.cross.md  0001-0121.cross.md  0001-0124.cross.md  0001-0126.cross.md  0001-0128.cross.md  0001-0129.cross.md  0001-0130.cross.md  0001-0134.cross.md  0001-0135.cross.md  0001-0142.cross.md  0001-0143.cross.md  0001-0144.cross.md  0001-0145.cross.md  0001-0152.cross.md  0001-0153.cross.md  0001-0154.cross.md  0001-0157.cross.md  0001-0158.cross.md  0001-0160.cross.md  0001-0161.cross.md  0001-0162.cross.md  (+30 more)
archive/webui-vite-source/: ARCHIVED.md  package-lock.json  package.json
benchmarks/fidelity/: __init__.py  contract.py  golden.py  spec_metrics.py
benchmarks/fixtures/: surface_cases.json
benchmarks/registry/: memory_benchmarks.json
docs/: BENCHMARK_SOP.md  CODE_LAYOUT.md  ENGINEERING_LOG.md  HOLOGRAPHIC_SURFACE.md  MACOS.md  PGVECTOR_LOCAL.md  PROTECTION_MODEL.md  RAG_ARCHITECTURE.md  README.md  SEAM_OPERATOR_GUIDE.md  SOP_CI_BENCH_GATE_PREP_DEEPSEEK.md  SOP_CI_HARDENING_DEEPSEEK.md  SOP_EXTERNAL_BENCH_LLM_JUDGE.md  SOP_EXTERNAL_BENCH_LOCOMO_SEAM_ADAPTER.md  SOP_EXTERNAL_BENCH_MEM0_COMPARATOR.md  SOP_EXTERNAL_BENCH_PHASE1_REGISTRY.md  SOP_EXTERNAL_BENCH_ZEP_COMPARATOR.md  SOP_HOLOGRAPHIC_SURFACE.md  SOP_TRACK_K_BIL_PHASE1_DEEPSEEK.md  SOP_TRACK_K_BIL_PHASE1_REPAIR_HANDOFF.md  SOP_TRACK_M_P0_DEEPSEEK.md  SOP_TRACK_M_P1_REAL_BENCHMARK_RUNS.md  SOP_TRACK_M_P2_LOCOMO_RETRIEVAL_WIRING.md  SOP_TRACK_M_P3_LOCOMO_SCORE_IMPROVEMENTS.md  errors.md  setup.md
docs/audits/: 2026-05-28-deep-health-audit.md  2026-05-28-locomo-retrieval-memory.md  2026-06-01-paid-locomo-slice-validation.md  2026-06-01-semantic-recovery-policy-experiment.md  2026-06-12-mirl-compile-fidelity.md  2026-06-15-cat1-cat3-multihop-scope.md  2026-06-15-entity-aggregation-retrieval.md  2026-06-17-cat1-coreference-graphrag-blueprint.md
docs/engineering/: 01_ARCHITECTURE.md  05_SECURITY_ARCHITECTURE.md  06_ENGINEERING_CHANGE_SOP.md  07_TEST_AND_BENCHMARK_SOP.md  08_INCIDENT_RESPONSE.md  09_EPISTEMIC_CALIBRATION.md  README.md  VERIFICATION_MATRIX.md
docs/handoffs/: 2026-06-13-mirl-compiler-fidelity-handoff.md  2026-06-26-seam-vs-mem0-rungc-handoff.md
docs/howto/: README.md
docs/progress_tables/: README.md  benchmark_results.csv  milestones.csv  test_runs.csv
docs/prompts/: DEEPSEEK_CI_BENCH_GATE_PREP_PROMPT.md  DEEPSEEK_CI_HARDENING_PROMPT.md  DEEPSEEK_TRACK_K_BIL_PHASE1_PROMPT.md  DEEPSEEK_TRACK_M_P0_PROMPT.md  DEEPSEEK_TRACK_M_P1_REAL_BENCHMARK_RUNS_PROMPT.md
docs/roadmap/: COMPETITIVE_ROADMAP.md  CONTEXT_STREAMS.md  MEMORY_BENCHMARKS.md  SEAM_QUERY_ENGINE_SQL2_LEARNINGS.md  TRUST_SECURITY_AUDITABILITY.md
experimental/retrieval_orchestrator/: adapters.py
experimental/webui/: .gitignore  README.md  RESTORE_NOTES.md  index.html  package.json  vite.config.ts
installers/: README.md  install_seam.py  install_seam_macos.sh
sdk/: README.md  pyproject.toml
sdk/src/seam_client/: __init__.py  _transport.py  agent.py  async_client.py  client.py  errors.py  models.py
sdk/tests/: test_agent.py  test_artifact_boundary.py  test_async_client.py  test_client.py
sdk/tools/: verify_artifact_boundary.py
seam_runtime/: benchmark_baseline_policy.py  benchmark_integrity.py  benchmarks.py  bm25.py  cli.py  context_views.py  dashboard.py  doctor.py  external_memory_benchmarks.py  holographic.py  improvement.py  installer.py  lossless.py  mcp.py  mcp_protocol.py  models.py  nl.py  pack.py  pool.py  reconcile.py  retrieval.py  runtime.py  self_improve.py  server.py  storage.py  symbols.py  vector.py  vector_adapters.py
seam_runtime/retrieval_orchestrator/: adapters.py  planner.py
seam_runtime/webui/: dashboard.html  seam-api.js
skills/seam-engineer/: SKILL.md
test_seam_all/: test_benchmark_integrity.py  test_cli_import_isolation.py  test_external_memory_benchmarks.py  test_locomo_judge.py  test_locomo_judge_batch.py  test_locomo_mem0_adapter.py  test_locomo_runner_cli.py  test_locomo_zep_adapter.py  test_seam.py
tests/: conftest.py
tests/audit/: test_audit_2026_06_05.py  test_baseline_policy.py  test_beam_routing.py  test_bench_stub_seal_gate.py  test_benchmark_reproducibility.py  test_benchmark_signing_publish.py  test_bm25_lexical_channel.py  test_chat_endpoint.py  test_chroma_optional.py  test_chroma_sync_default.py  test_ci_pytest_scope.py  test_ci_verify_gates.py  test_conversation_turn_compile.py  test_doctor_stashes.py  test_github_maintenance_report.py  test_github_package_metadata.py  test_github_pr_gates.py  test_h2_improvement_review.py  test_improve_cli.py  test_improvement_loop.py  test_judged_scorer.py  test_locomo_adapter_evidence_text.py  test_locomo_adapter_retrieval_event_writer.py  test_locomo_answer_quality_scorer.py  test_locomo_calibration.py  test_locomo_decomposer.py  test_locomo_entity_aggregation.py  test_locomo_failure_audit.py  test_locomo_full_dataset_routing.py  test_locomo_recall_scorer.py  test_locomo_result_durability.py  test_longmemeval_routing.py  test_mcp_artifact_containment.py  test_mcp_line_cap.py  (+19 more)
tools/: run_external_memory_benchmarks.py
webui/: .gitignore  README.md  RESTORE_NOTES.md  package-lock.json  vite.config.ts
(+78 files in other folders)
