[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seam-runtime"
version = "0.1.0"
description = "SEAM memory runtime and glassbox operator tooling for AI agents"
readme = "README.md"
license = { text = "Proprietary - source-available evaluation only" }
requires-python = ">=3.11"
classifiers = [
  "License :: Other/Proprietary License",
  "Private :: Do Not Upload",
]
dependencies = [
  "chromadb==1.5.7",
  "rich>=14.2,<16",
  "tiktoken>=0.8.0",
]

[project.optional-dependencies]
dash = ["textual>=0.50"]
pgvector = ["psycopg[binary]>=3.0"]
sbert = ["sentence-transformers>=2.0"]
server = ["fastapi>=0.100", "uvicorn[standard]>=0.23", "python-multipart>=0.0.6"]
agent = []
rerank = ["sentence-transformers>=2.0"]
bench-judge = ["anthropic>=0.40", "openai>=1.0"]
all-extras = ["textual>=0.50", "psycopg[binary]>=3.0", "sentence-transformers>=2.0", "fastapi>=0.100", "uvicorn[standard]>=0.23", "python-multipart>=0.0.6"]

[project.scripts]
seam = "seam:main"
seam-benchmark = "seam:benchmark_main"
seam-dash = "seam_runtime.dashboard:main"
seam-server = "seam_runtime.server:main"
seam-mcp = "seam_runtime.mcp_protocol:main"

[tool.setuptools]
py-modules = ["seam"]

[tool.setuptools.packages.find]
include = ["experimental*", "seam_runtime*"]

[tool.setuptools.exclude-package-data]
# Operator-local Codex profile; never ship in the wheel.
seam_runtime = ["config.toml"]
